discussion/kv_engine/176364/176364_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-29 16:52:07.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-29 17:35:03.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47178/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes.....\kv_engine\engines\ep\tests\ep_testsuite_basic.cc:152 Test failed: `" (Expected `500", got `50" - Incorrect low wat.)
(78 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47178/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18412/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18412/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18412/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39628/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39628/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39628/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8085/ : FAILURE

Compile error at [2022-06-29T16:58:10.308Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8085/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19516/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
[2022-06-29T17:09:03.176Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1331: Failure
[2022-06-29T17:09:03.176Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-06-29T17:09:03.176Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (8509 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20642/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:119 Test failed: `" (Expected `100", got `1000000" - Incorrect smaller size.)
[2022-06-29T17:12:42.937Z] (266 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20642/ )

Failure of GoogleTest "SslCertTest.LoginWhenMandatoryGoClient":

<pre>
[ RUN      ] SslCertTest.LoginWhenMandatoryGoClient
[2022-06-29T17:13:38.270Z] TLS handshake failed when connecting to localhost:34151, err=EOF
[2022-06-29T17:13:38.270Z] MakeTLSConn error: EOF
[2022-06-29T17:13:38.270Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_cert_tests.cc:308: Failure
[2022-06-29T17:13:38.270Z] Expected equality of these values:
[2022-06-29T17:13:38.270Z]   "Success"
[2022-06-29T17:13:38.270Z]   status
[2022-06-29T17:13:38.270Z]     Which is: "Failure"
[2022-06-29T17:13:38.270Z] {
[2022-06-29T17:13:38.270Z]   "WCOREDUMP": 0,
[2022-06-29T17:13:38.270Z]   "WEXITSTATUS": 1,
[2022-06-29T17:13:38.270Z]   "WIFEXITED": true,
[2022-06-29T17:13:38.270Z]   "WIFSIGNALED": false,
[2022-06-29T17:13:38.270Z]   "WTERMSIG": 0,
[2022-06-29T17:13:38.270Z]   "WTERMSIGNAL": "Unknown signal 0"
[2022-06-29T17:13:38.270Z] }
[2022-06-29T17:13:38.270Z] [  FAILED  ] SslCertTest.LoginWhenMandatoryGoClient (1413 ms)
SslCertTest.LoginWhenMandatoryGoClient
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20296/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1467 Test failed: `" (Expected `500000000", got `1073741824" - Incorrect new size.)
[2022-06-29T17:11:29.922Z] (156 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21283/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8184/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
